--- a/style.css
+++ b/style.css
@@ -51,8 +51,17 @@ body * {
     text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 900px) {
+    .gameBox {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 700px) {
     .gameBox {
         width: 100%;
+    }
+    .airplane {
+        bottom: 25px;
     }
 }
